--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -27,4 +27,4 @@ jobs:
       - name: install wrangler
         run: npm i -g wrangler
       - name: deploy
-        run: wrangler deploy --branch main
+        run: wrangler deploy
