--- a/package.json
+++ b/package.json
@@ -1,17 +1,21 @@
 {
-  "name": "code.faroe.dev",
-  "type": "module",
-  "version": "1.0.0",
-  "main": "index.js",
-  "keywords": [],
-  "author": "",
-  "license": "MIT",
-  "packageManager": "pnpm@10.11.0",
-  "dependencies": {
-    "shiki": "^3.12.1",
-    "typescript": "^5.9.2"
-  },
-  "devDependencies": {
-    "@types/node": "^24.3.0"
-  }
+    "name": "code.faroe.dev",
+    "type": "module",
+    "version": "1.0.0",
+    "main": "index.js",
+    "keywords": [],
+    "author": "",
+    "license": "MIT",
+    "packageManager": "pnpm@10.11.0",
+    "scripts": {
+        "format": "prettier -w --use-tabs --print-width 100 index.ts"
+    },
+    "dependencies": {
+        "prettier": "^3.6.2",
+        "shiki": "^3.12.1",
+        "typescript": "^5.9.2"
+    },
+    "devDependencies": {
+        "@types/node": "^24.3.0"
+    }
 }
